--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,13 @@
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="Web App Libraries.libraryclasspath">
+        <pathelement location="WebContent/WEB-INF/lib/annotations-api.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/catalina-ant.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/catalina-ha.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/catalina-storeconfig.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/catalina-tribes.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/catalina.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/cdi-api-1.1.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/classmate-1.3.0.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/classmate-1.3.1.jar"/>
@@ -20,7 +26,9 @@
         <pathelement location="WebContent/WEB-INF/lib/commons-lang3-3.2.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/ecj-4.5.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/el-api-2.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/el-api.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/freemarker-2.3.22.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/geronimo-jta_1.1_spec-1.1.1.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/hamcrest-core-1.3.jar"/>
@@ -34,6 +42,8 @@
         <pathelement location="WebContent/WEB-INF/lib/jackson-core-2.8.1.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/jackson-databind-2.8.1.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/jandex-2.0.0.Final.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/jasper-el.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/jasper.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/javassist-3.20.0-GA.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/javax.el-2.2.4.jar"/>
@@ -42,6 +52,7 @@
         <pathelement location="WebContent/WEB-INF/lib/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/jboss-logging-3.3.0.Final.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/json-20160807.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/jsp-api.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/jsr250-api-1.0.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/junit-4.12.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/jwebunit-1.1.1.jar"/>
@@ -53,37 +64,31 @@
         <pathelement location="WebContent/WEB-INF/lib/ognl-3.0.19.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/pgjdbc-ng-0.6-complete.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/postgresql-9.4.1212.jre6.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/servlet-api.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/slf4j-api-1.7.22.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/struts2-core-2.3.31.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/system-rules-1.16.0.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-api.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-coyote.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-dbcp.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-i18n-es.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-i18n-fr.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-i18n-ja.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-jdbc.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-jni.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-util-scan.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-util.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/tomcat-websocket.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/websocket-api.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/xwork-core-2.3.31.jar"/>
     </path>
     <path id="EAR Libraries.libraryclasspath"/>
-    <path id="struts2.userclasspath">
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-fileupload-1.3.2.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-io-2.2.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-lang3-3.2.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/freemarker-2.3.22.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/ognl-3.0.19.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/postgresql-9.4.1212.jre6.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/struts2-core-2.3.31.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/xwork-core-2.3.31.jar"/>
-    </path>
-    <path id="JUnit.userclasspath">
-        <pathelement location="../../../../HeathrowWebPage/lib/junit/hamcrest-core-1.3.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/junit/junit-4.12.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/junit/jwebunit-1.1.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/junit/objenesis-tck-2.2.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/junit/system-rules-1.16.0.jar"/>
-    </path>
-    <path id="Notify.userclasspath">
-        <pathelement location="../../../../HeathrowWebPage/lib/pgjdbc-ng-0.6-complete.jar"/>
-    </path>
+    <path id="struts2.userclasspath"/>
+    <path id="JUnit.userclasspath"/>
+    <path id="Notify.userclasspath"/>
     <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
-        <pathelement location="../../HeathrowWebPage/lib/annotations-api.jar"/>
+    	<pathelement location="../../HeathrowWebPage/lib/annotations-api.jar"/>
         <pathelement location="../../HeathrowWebPage/lib/catalina-ant.jar"/>
         <pathelement location="../../HeathrowWebPage/lib/catalina-ha.jar"/>
         <pathelement location="../../HeathrowWebPage/lib/catalina-storeconfig.jar"/>
@@ -108,16 +113,7 @@
         <pathelement location="../../HeathrowWebPage/lib/tomcat-websocket.jar"/>
         <pathelement location="../../HeathrowWebPage/lib/websocket-api.jar"/>
     </path>
-    <path id="Socket.userclasspath">
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-annotations-2.8.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-core-2.8.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-databind-2.8.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/json-20160807.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/log4j-core-2.6.2.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-all-4.1.5.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-socketio-1.7.7 .jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/slf4j-api-1.7.22.jar"/>
-    </path>
+    <path id="Socket.userclasspath"/>
     <path id="hibernate.userclasspath">
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/cdi-api-1.1.jar"/>
@@ -132,7 +128,6 @@
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-validator-annotation-processor-5.3.3.Final.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-validator-cdi-5.3.3.Final.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jandex-2.0.0.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javassist-3.20.0-GA.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javax.el-2.2.4.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javax.el-api-2.2.4.jar"/>
@@ -142,37 +137,64 @@
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jsr250-api-1.0.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
     </path>
+    <path id="SocketIO.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-annotations-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-core-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-databind-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/json-20160807.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/log4j-core-2.6.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-all-4.1.5.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-socketio-1.7.7 .jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/slf4j-api-1.7.22.jar"/>
+    </path>
+    <path id="struts.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-fileupload-1.3.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-io-2.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-lang3-3.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/freemarker-2.3.22.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/ognl-3.0.19.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/postgresql-9.4.1212.jre6.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/struts2-core-2.3.31.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/xwork-core-2.3.31.jar"/>
+    </path>
     <path id="HeathrowWebPage.classpath">
         <pathelement location="build/classes"/>
         <path refid="Web App Libraries.libraryclasspath"/>
         <path refid="EAR Libraries.libraryclasspath"/>
         <path refid="struts2.userclasspath"/>
         <path refid="JUnit.userclasspath"/>
-        <pathelement location="lib/junit/hamcrest-core-1.3.jar"/>
-        <pathelement location="lib/junit/junit-4.12.jar"/>
-        <pathelement location="lib/junit/jwebunit-1.1.1.jar"/>
-        <pathelement location="lib/junit/objenesis-tck-2.2.jar"/>
-        <pathelement location="lib/junit/system-rules-1.16.0.jar"/>
         <path refid="Notify.userclasspath"/>
         <path refid="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
-        <pathelement location="lib/mockito-all-1.10.19.jar"/>
         <path refid="Socket.userclasspath"/>
         <path refid="hibernate.userclasspath"/>
+        <pathelement location="WebContent/WEB-INF/lib/hamcrest-core-1.3.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/junit-4.12.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/jwebunit-1.1.1.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/mockito-all-1.10.19.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/objenesis-tck-2.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/system-rules-1.16.0.jar"/>
+        <path refid="SocketIO.userclasspath"/>
+        <path refid="struts.userclasspath"/>
     </path>
     <target name="init">
         <mkdir dir="build/classes"/>
         <copy includeemptydirs="false" todir="build/classes">
             <fileset dir="src">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
         <copy includeemptydirs="false" todir="build/classes">
             <fileset dir="resources">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
         <copy includeemptydirs="false" todir="build/classes">
             <fileset dir="tests">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
